Fix place-ships-grid placements when error text is visible

--- a/src/styles.css
+++ b/src/styles.css
@@ -111,7 +111,7 @@ button img {
 #place-ships-page {
    display: grid;
    grid-template-columns: auto 1fr;
-   grid-template-rows: auto auto 1fr;
+   grid-template-rows: auto auto auto 1fr;
 
    gap: 0.5rem;
 }
@@ -125,6 +125,7 @@ button img {
 
 #ship-options {
    display: grid;
+   grid-area: 4 / 1 / -1 / 2;
    grid-template-rows: auto 1fr;
 
    width: min(20vw, 20vh);
@@ -180,6 +181,7 @@ button img {
 
 #error-text {
    display: none;
+   grid-area: 3 / 1 / 4 / -1;
 
    margin: 0.5rem;
    text-align: center;
@@ -205,6 +207,8 @@ button img {
 }
 
 #placement-grid {
+   grid-area: 4 / 2 / -1 / -1;
+
    width: min(70vw, 70vh);
    height: min(70vw, 70vh);
 }
